apollo-federation/src/connectors/expand/tests/snapshots/connectors@directives.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/directives.graphql
---
{}
